# AlgorithmPractice

./: .gitignore  CMakeLists.txt  README.md  build.sh
1.algorithms/: AddArrayMembersTest.cpp  BinarySearchTest.cpp  CMakeLists.txt  FindLargestNumberTest.cpp  FindSmallestNumberTest.cpp  SequentialSearchTest.cpp  TestUtils.hpp
2.divide-and-conquer/: CMakeLists.txt  MergeSortTest.cpp
algorithms/1.algorithms/: ExchangeSortTest.cpp  FibonacciSequenceTest.cpp  MatrixMultiplicationTest.cpp
algorithms/2.divide-and-conquer/: BinarySearchTest.cpp  CMakeLists.txt
include/: TestUtils.hpp
programming/3n+1/: CMakeLists.txt  main.cpp  unittest
scripts/: BuildModules.cmake
